@@ -620,7 +620,6 @@ void bus_socket_setup(sd_bus *b) {
         fd_inc_rcvbuf(b->input_fd, SNDBUF_SIZE);
         fd_inc_sndbuf(b->output_fd, SNDBUF_SIZE);
 
-        b->is_kernel = false;
         b->message_version = 1;
         b->message_endian = 0;
 }
