@@ -19,6 +19,7 @@ systemd System and Service Manager
  		• remove “attach_flags” field;
  		• add “is_monitor” field;
  		• add “accept_fd” field;
+ 		• remove “is_kernel” field;
  	- struct bus_body_part:
  		• remove “memfd” field;
  	- struct sd_bus_message:
